<resources>
    <string name="app_name">Kovac App</string>

    <!-- Landing Screen -->
    <string name="take_control"><i>Take control of your superannuation</i></string>

    <!-- Login screen text -->
    <string name="client_portfolio_access">Client Portfolio Access</string>
    <string name="existing_client_but_dont_have_a_login">Existing client but don\'t have a login?</string>
    <string name="register_here">Register <u>here</u></string>

    <!-- Register screen text -->
    <string name="existing_client_online_registration">Existing client online registration</string>

    <!-- Registration success text -->
    <string name="registration_success_message">Your registration has been submitted!</string>
    <string name="registration_success_discription">Our team will setup your registration by the next business day and you will receive a confirmation email when your online access is ready. </string>

    <!-- Kovac why with us screen text -->
    <string name="header_text">Kovac Smart Super Accounts</string>
    <string name="discription_text1">A better and innovative way to invest your superannuation. The Kovac Smart Superannuation Accounts are completely transparent, individual superannuation investment accounts managed by our highly skilled and experienced investment team.</string>
    <string name="discription_text2"><b style="font-size: 20px;">Benefits of a Kovac Smart Super Account</b></string>
    <string name="discription_text3">-100% Free superannuation assessment including a personalised, detailed Statement of Advice.\n
        - Ultra low adviser service fee of 0.8% per year on the balance of your superannuation fund.\n
        - Real time access to your superannuation portfolio, account details and more across all of your personal devices.\n
        - Your own personal financial adviser who will provide ongoing financial advice, strategy and support by email or phone\n
        - Genuinly active and high conviction investment manager, meaning potentially significant outperformance of investment portfolios.\n
        - Managed in accordance with our robust, disciplined and proven investment philosophy and process.\n
        - Diversified, transparent investment portfolio with direct superannuation ownership of investments in:\n
                  \t\t\t- Direct Australian Shares\n
                  \t\t\t- International Managed Funds\n
                  \t\t\t- Exchange Traded Funds (ETFs)\n
                  \t\t\t- Corporate Hybrid Securities\n
    </string>

    <!-- Insurance screen text -->
    <string name="insurance_desc">Personal protection and life insurance is a very important part of your superannuation. Most superannuation accounts provide some level of life insurance so it is important that we know and understand your current insurance cover and your insurance needs.</string>

    <!-- Risk Profile Screen text -->
    <string name="top_desc">In order to build a superannuation investment portfolio that is suitable to your personal situation we need to assess your investment style and what levels of risk you are willing to take.
\nPlease select the risk level you believe fits your personal financial objectives.</string>
    <string name="high_growth_desc">A high growth investor is typically someone who will not access their super for more than 15 years and is willing to accept greater volitility in the value of their portfolio.</string>
    <string name="growth_desc">A growth investor is typically someone who will not access their super for more than 10 years and is willing to accept a higher volitility in the value of their portfolio.</string>
    <string name="balanced_desc">A balanced investor is typically someone who will not access their super for more than 5 years and is willing to accept moderate volitility in the value of their portfolio.</string>
    <string name="concervative_desc">A concervative investor is typically someone who is retired and is receiving an income stream from their superannuation portfolio.</string>

    <!-- Identification Screen text -->
    <string name="identification_desc">Please provide your drivers licence or passport so we can varify your new superannuation account.
Use the capture frame to take a photo of your licence or passport and upload it to our system.</string>


    <!-- Disclaimer screen text -->
    <string name="disclaimer_desc">I confirm that all details provided in this application are accurate to the best of my knowledge.\n\n

        I agree to give Kovac Private Wealth Pty Ltd adviser authority on my current superannuation fund to discuss any details on my account with the provider.\n\n

        By clicking submit you are instructing Kovac Private Wealth Pty Ltd to complete a Statement of Advice that will outline all details of your superannuation investment and insurance. You will not be charged for this service and remain under no obligation to proceed.
    </string>


    <!-- Submitted Screen text -->
    <string name="submitted_desc">We have received your superannuation application and will process it within one business day. Our team will produce a personalised Statement of Advice that will outline all of the details of our advice and any fees that will be charged to your new super fund. <b>You will not pay any fees out of your own pocket.</b>

\n\nYou will also receive your completed superannuation account application form to provide your digital signature.

\n\nIf you would like a free conversation or meeting with your financial adviser please check the below checkbox and your personal financial adviser will call you shortly.</string>

    <string name="submitted_accept_term">Yes, I would like my personal financial adviser to contact me to discuss my superannuation portfolio.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="get_started"><u>Get Started</u></string>

    <string name="finger_title">Touch id for \"Kovac Super\"</string>
    <string name="finger_desc">Authentication required to see portal"</string>

    <!-- Acra crash report library -->
    <string name="crash_toast_text">Ooooops ! I crashed, but a report has been sent to my developer to help fix the issue !</string>
</resources>
