<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.kovac.app.fragments.LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitCenter"
            android:src="@drawable/small3" />

        <TextView
            android:id="@+id/textViewDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/logo_image"
            android:text="@string/client_portfolio_access"
            android:textColor="@color/color_label"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewUserNmae"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textViewDesc"
            android:layout_centerVertical="true"
            android:layout_marginTop="35dp"
            android:textSize="@dimen/input_text_size"
            android:text="Username"
            android:textColor="@color/color_label" />

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textViewDesc"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/border_with_corner"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/etUserName"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:text="Password"
            android:textSize="@dimen/input_text_size"
            android:textColor="@color/color_label" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/etUserName"
            android:layout_centerVertical="true"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/border_with_corner"
            android:inputType="textPassword" />

        <!--<TextView
            android:id="@+id/textViewRememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPassword"
            android:layout_centerVertical="true"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="8dp"
            android:textSize="@dimen/input_text_size"
            android:text="Remember me"
            android:textColor="@color/color_label" />

        <CheckBox
            android:id="@+id/cbRememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPassword"
            android:layout_centerVertical="true"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/textViewRememberMe"
            android:layout_toRightOf="@+id/textViewRememberMe"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:text=""
            android:textSize="0sp" />-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/textViewPassword"
            android:id="@+id/buttonLayout"
            android:layout_marginTop="35dp">

            <Button
                android:id="@+id/btnHome"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:background="@drawable/border_with_corner"
                android:text="Back to Home"
                android:textColor="@color/color_button_text"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/border_with_corner"
                android:text="Login"
                android:textStyle="bold"
                android:textColor="@color/color_button_text"
                android:textAllCaps="false" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textViewExistingClient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonLayout"
            android:layout_alignParentRight="true"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/input_text_size"
            android:text="@string/existing_client_but_dont_have_a_login"
            android:textColor="@color/color_label" />

        <TextView
            android:id="@+id/textViewRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewExistingClient"
            android:layout_alignParentRight="true"
            android:layout_marginTop="8dp"
            android:textSize="@dimen/input_text_size"
            android:text="@string/register_here"
            android:textColor="@color/color_label" />

    </RelativeLayout>
</ScrollView>

